# ltm

./: .gitignore  COMMAND_IMPROVEMENTS_IMPLEMENTED.md  Cargo.toml  LICENSE  MERGE_RESOLUTION_SUMMARY.md  README.md  TEST_COVERAGE.md  architecture.md  command_naming_plan.md  improvements.md  tasks.md
docs/: QuickRef.md  json-output-feature-prd.md
migrations/: 20240320000000_initial.sql
src/: commands.rs  db.rs  feedback.rs  formatting.rs  interactive.rs  json_formatting.rs  lib.rs  main.rs  models.rs  suggestions.rs  validation.rs
tests/: integration_tests.rs  json_integration_tests.rs  ui_tests.rs  validation_integration_tests.rs
