[package]
name = "lticket"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A local CLI-based ticket manager for personal workflow management"

[[bin]]
name = "ltm"
path = "src/main.rs"

[lib]
name = "lticket"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
edit = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
strsim = "0.10"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
futures = "0.3"
